dsa code AccountMerge