@@ -14,19 +14,33 @@ public class AccountMerge {
          ["John", "y@mail.com"]
     ]
      */
+
+    /*
+    Every email is treated as a node.
+    If two emails appear in the same account, they belong to the same person.
+    So we connect (union) all emails inside one account.
+
+    Finally:
+        every connected component = one merged account
+        collect emails belonging to the same component
+        sort them
+        prepend the owner's name
+     */
+
     public List<List<String>> accountsMerge(List<List<String>> accounts)
     {
         //email to id and name mapping
         Map<String, Integer> emailToId = new HashMap<>();
         Map<String, String> emailToName = new HashMap<>();
-        int id = 1;
+        int id = 0;
 
+        //assign every email a unique id - O(E) where E = total number of emails
         for(List<String> account : accounts){
-            String name = account.get(0);
+
+            String name = account.getFirst();
 
             for(int i=1; i<account.size(); i++){
                 String email = account.get(i);
-
                 if(!emailToId.containsKey(email)){
                     emailToId.put(email, id++);
                     emailToName.put(email, name);
@@ -34,31 +48,39 @@ public class AccountMerge {
             }
         }
 
-        //iterate input and union email ids for the same user
-        graph.unionfindDSU.UnionFind unionFind = new graph.unionfindDSU.UnionFind(id);
+        //union emails inside each account - O(E) as every email participates once.
+        graph.unionfindDSU.UnionFind uf = new graph.unionfindDSU.UnionFind(id);
+
         for(List<String> account : accounts){
+
             String firstEmail = account.get(1);
+            int firstEmailId = emailToId.get(firstEmail);
 
             for(int i=2; i<account.size(); i++){
                 String email = account.get(i);
-                unionFind.union(emailToId.get(firstEmail), emailToId.get(email));
+
+                //union by id
+                uf.union(firstEmailId, emailToId.get(email));
             }
         }
 
-        //group emails
+        //group emails - O(E)
         Map<Integer, List<String>> groupedEmails = new HashMap<>();
 
         for(String email : emailToId.keySet()){
-            int root = unionFind.find(emailToId.get(email));
+            int root = uf.find(emailToId.get(email));
             groupedEmails.computeIfAbsent(root, key -> new ArrayList<>()).add(email);
         }
 
         //collect result
         List<List<String>> result = new ArrayList<>();
-        for(List<String> emails : groupedEmails.values()){
-            Collections.sort(emails); //sort emails
 
-            String name = emailToName.get(emails.get(0));
+        for(List<String> emails : groupedEmails.values()){
+
+            Collections.sort(emails); //sort emails - O(E log E)
+
+            String name = emailToName.get(emails.getFirst());
+
             List<String> account = new ArrayList<>();
             account.add(name);
             account.addAll(emails);
